--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="mt-5 d-flex justify-content-around">
+  <button type="button" class="btn btn-primary" (click)="postAttivi()">
+    Vai a Post Attivi
+  </button>
+  <button type="button" class="btn btn-primary" (click)="postInattivi()">
+    Vai a Post Inattivi
+  </button>
+</div>
