--- a/src/app/components/inactive-post/inactive-post.component.html
+++ b/src/app/components/inactive-post/inactive-post.component.html
@@ -1,1 +1,14 @@
-<p>inactive-post works!</p>
+<div class="container mt-3">
+  <div *ngFor="let post of posts">
+    <div *ngIf="!post.active">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">{{ post.title }}</h5>
+          <p class="card-text">
+            {{ post.body }}
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
