--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,7 +26,7 @@
         <li class="nav-item">
           <a
             class="nav-link"
-            [routerLink]="['/activepost']"
+            [routerLink]="['/activePost']"
             routerLinkActive="active"
             >post attivi</a
           >
@@ -34,7 +34,7 @@
         <li class="nav-item">
           <a
             class="nav-link"
-            [routerLink]="['/inactivepost']"
+            [routerLink]="['/inactivePost']"
             routerLinkActive="active"
             >post inattivi</a
           >
